Refactor normalization methods to replace manual min/max logic with `Math.clamp` for improved readability.